--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "orchestra/foundation": "~3.3.0",
+        "orchestra/foundation": "~3.3.0"
     },
     "minimum-stability": "dev"
 }
