--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,7 @@
         }
     },
     "require": {
-        "php": ">=5.6.0",
-        "orchestra/foundation": "~3.3.0",
-        "threef/entree": "~1.0.0"
+        "php": ">=5.6.0"
     },
     "minimum-stability": "dev"
 }
